<resources>
    <string name="app_name">BudgetMinimalism</string>
    <string name="action_settings">Settings</string>
    <string name="SetIncomeCategories">Set Income Categories</string>
    <string name="income_label">Category 1</string>
    <string name="income_label2">Amount</string>
    <string name="income_label3">$~~~~</string>
    <string name="income_label4">Paycheck</string>
    <string name="income_label5">Dividends</string>
    <string name="income_label6">Gift</string>
    <string name="income_label7">Other</string>
    <string name="income_category2">Category 2</string>
    <string name="income_category_3">Category 3</string>
    <string name="income_category4">Category 4</string>
    <string name="income_category5">Category 5</string>
    <string name="welcomeText1">Welcome!</string>
    <string name="Income">Income</string>
    <string name="button_label3">Expense</string>
    <string name="button_label4">View</string>
    <string name="button_label5">Category</string>
    <string name="button_label6">Amount</string>
    <string name="text_label1">Input Income</string>
    <string name="optional">optional</string>
    <string name="Description">Description</string>
    <string name="Submit">Submit</string>
    <string name="elipse">....</string>
    <string name="InputExpense">Input Expense</string>
    <string name="setexpensecats">Set Expense Categories</string>
    <string name="developerInfo">Developer Info</string>
    <string name="recentActivity">Recent Activity</string>

    <!-- Below is a string array which hardcodes the expense categories -->
    <string-array name="expenseCategoriesArray">
        <item>Groceries</item>
        <item>Subscriptions</item>
        <item>Rent</item>
        <item>Dining out</item>
        <item>School</item>
        <item>Phone</item>
        <item>Car Insurance</item>
    </string-array>

    <!-- Below is a string array which hardcodes the income categories -->
    <string-array name="incomeCategoriesArray">
        <item>Groceries</item>
        <item>Subscriptions</item>
        <item>Rent</item>
        <item>Dining out</item>
        <item>School</item>
        <item>Phone</item>
        <item>Car Insurance</item>
    </string-array>


</resources>
