<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#6cff66"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#6cff66"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:tint="#000000"
        app:backgroundTint="#6cff66"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/income_label3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_label2"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/income_label3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_label2"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/income_label3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_label2"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText9"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label2"
        android:textColor="#000000"
        android:textSize="24sp"
        android:typeface="monospace"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.098" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/income_label4"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_label"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/income_label6"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_category2"
        android:textColor="#000000"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.223" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="76dp"
        android:ems="10"
        android:hint="@string/income_label5"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_category_3"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="492dp"
        android:ems="10"
        android:hint="@string/income_label7"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_label"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/income_label7"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_label"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="0.385" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/income_label3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_label2"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/income_label3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/income_label2"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

</androidx.constraintlayout.widget.ConstraintLayout>